# pl

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main_fpl_model.R  pyproject.toml  requirements-ensemble.txt  requirements.txt  streamlit_app.py
.github/workflows/: fpl-sync.yml  fpl-weekly-postgw.yml  two-tier-training.yml
artifacts/: last_postgw_event.json
artifacts/ensemble/: lstm_model.keras  preprocess.joblib  role_scaling.json
docs/: AI_AGENT_INSTRUCTIONS.md  AUTOMATION_SETUP.md  COMPLETE_IMPLEMENTATION.md  GITHUB_ACTIONS_DEPLOYED.md  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_SUMMARY.md  ML_ARCHITECTURE_STATUS.md  NEW_PLAYERS_TEAMS.md  TEAM_STRENGTH_POSITION_FEATURES.md  TWO_TIER_IMPLEMENTATION_SUMMARY.md  TWO_TIER_TRAINING_STRATEGY.md  VISUAL_SUMMARY.md
models/: feature_config.json
outputs/: projections.csv  projections_internal.csv
reports/: evaluation_history.csv  evaluation_summary.csv
scripts/: 10_train_base_model.py  11_weekly_finetune.py  blend_weights.py  ensemble_predict.py  evaluate_model.py  fpl_gameweek_gate.py  generate_projections_json.py  generate_site.py  inspect_actuals.py  inspect_fixtures.py  predict_with_enhancements.py  setup_venv.ps1  setup_venv.sh  show_results.py  test_data_pipeline.py  train_ensemble_stacker.py  train_ensemble_stacker_v2.py  validate_teams_players.py
site/: README.md  index.html  projections.json  projections_summary.json  script.js  style.css
site/data/: projections.json  stats.csv  teams.json
site_api/: README.md  app.py
src/fpl_projection/: config.py  data_loading.py  train.py  (+18 more)
(+17 files in other folders)
